refactor: migrate Collections/Arrays.asList to Java 9+ collection factories (#1089)
* refactor: migrate Collections/Arrays.asList to Java 9+ factory methods

Motivation:
Java 9+ provides List.of(), Map.of(), Set.of() factory methods that are
more concise and return truly immutable collections.

Modification:
Replace Arrays.asList() with List.of(), Collections.singletonList()
with List.of(), Collections.emptyList/Map/Set() with List/Map/Set.of(),
new HashMap<>() + put() chains with Map.of(), and
new HashSet<>(Arrays.asList()) with Set.of() across 20 files.
Correctly skips shaded com.twitter.hpack code and array-parameter
conversions in Util.java and MediaTypes.java.

Result:
Cleaner code using Java 17 immutable collection factories.

Tests:
Not run - compile-only test file changes

References:
None - Java 17 API modernization

* fix: revert Collections.emptySet/emptyMap/emptyList to original API

Motivation:
Review feedback: prefer Collections.emptyMap(), Collections.emptySet(),
Collections.emptyList() over Map.of(), Set.of(), List.of() for empty
collections since they use well-known immutable singleton APIs.

Modification:
Revert empty collection conversions while keeping non-empty
Arrays.asList -> List.of and Collections.singletonList -> List.of
conversions.

Result:
Empty collections use the established Collections.empty* API.

* style: apply javafmt to fix Checks failure

Apply javafmt to 5 test files that were failing code style check.